2009-12-06  Benjamin Riefenstahl  <b.riefenstahl@turtle-trading.net>

	* macosx/tkMacOSXFont.c (GetFontFamilyName): [Bug #2548661] Merge fix
	from HEAD (1.44).

2009-12-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* library/ttk/xpTheme.tcl:    Fix selection of treeview rows on
	* library/ttk/vistaTheme.tcl: Windows XP and Vista.

2009-12-02  Jan Nijtmans  <nijtmans@users.sf.net>

	* doc/GetHINSTANCE.3       correct mentioned header file
	* win/tkWinInt.h           make TkWinChildProc available in private
	* generic/tkInt.decls      stub table. [Bug #220600] and [Bug #220690].
	* generic/tkIntPlatDecls.h (regenerated)
	* generic/tkStubInit.c     (regenerated)

2009-11-25  Stuart Cassoff <stwo@users.sf.net>

	* unix/tcl.m4:		[Patch 2892871]: Remove unneeded
	*			AC_STRUCT_TIMEZONE.
	* unix/configure:	Regenerated with autoconf-2.59.

2009-11-24  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixWm.c (WmIconphotoCmd): [Bug 2902814]: Use the correct
	type for the array of data passed into X. It's wrong, but "right"
	because of a mistake in the X11 specification.

2009-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winWm.test: [Bug 2899949]: Make sure the window is still
	* win/tkWinWm.c:    present when handling delayed activation

2009-11-13  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tests/winDialog.test: [Bug 2307837]: Backported fix for running
	* win/tkWinTest.c:      dialog tests on non-English locales

2009-11-12  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.8 TAGGED FOR RELEASE ***

	* changes:	Updated for 8.5.8 release.

2009-11-03  Don Porter  <dgp@users.sourceforge.net>

	* generic/tk.h:		Bump to 8.5.8 for release.
	* library/tk.tcl:
	* unix/configure.in:
	* unix/tk.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Updated for 8.5.8 release.

2009-11-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinWm.c: [Bug 2891541]: Permit normal behaviour on